--- a/stylesheet.css
+++ b/stylesheet.css
@@ -994,13 +994,11 @@ audio {
 		-webkit-transform:translate(0px,-1000px);
 	}
 	33%{
-		-webkit-transform:translate(0px,0px);
-		-webkit-transform:rotate(10deg);
+		-webkit-transform:translate(0px,0px) rotate(10deg);
 		/*-webkit-transform:scale(1.5);*/
 	}
 	66% {
-		-webkit-transform:translate(0px,100px);
-		-webkit-transform:rotate(-10deg);
+		-webkit-transform:translate(0px,100px) rotate(-10deg);
 	}
 	100% {
 		-webkit-transform:translate(0px,0px);
@@ -1011,13 +1009,11 @@ audio {
 		-moz-transform:translate(0px,-1000px);
 	}
 	33%{
-		-moz-transform:translate(0px,0px);
-		-moz-transform:rotate(10deg);
+		-moz-transform:translate(0px,0px) rotate(10deg);
 		/*-webkit-transform:scale(1.5);*/
 	}
 	66% {
-		-moz-transform:translate(0px,100px);
-		-moz-transform:rotate(-10deg);
+		-moz-transform:translate(0px,100px) rotate(-10deg);
 	}
 	100% {
 		-moz-transform:translate(0px,0px);
@@ -1028,13 +1024,11 @@ audio {
 		-o-transform:translate(0px,-1000px);
 	}
 	33%{
-		-o-transform:translate(0px,0px);
-		-o-transform:rotate(10deg);
+		-o-transform:translate(0px,0px) rotate(10deg);
 		/*-webkit-transform:scale(1.5);*/
 	}
 	66% {
-		-o-transform:translate(0px,100px);
-		-o-transform:rotate(-10deg);
+		-o-transform:translate(0px,100px) rotate(-10deg);
 	}
 	100% {
 		-o-transform:translate(0px,0px);
@@ -1056,19 +1050,17 @@ audio {
 	100% {
 		-ms-transform:translate(0px,0px);
 	}
-}o
+}
 @keyframes bannar_come {
 	0%{
 		transform:translate(0px,-1000px);
 	}
 	33%{
-		transform:translate(0px,0px);
-		transform:rotate(10deg);
+		transform:translate(0px,0px) rotate(10deg);
 		/*-webkit-transform:scale(1.5);*/
 	}
 	66% {
-		transform:translate(0px,100px);
-		transform:rotate(-10deg);
+		transform:translate(0px,100px) rotate(-10deg);
 	}
 	100% {
 		transform:translate(0px,0px);
@@ -1282,76 +1274,82 @@ audio {
 }
 
 .btn-primary {
-  /* warm, friendly tokens */
-  --btn-bg: #e37a68;
-  --btn-bg-hover: #e98a78;
-  --btn-bg-active: #d96a58;
-  --btn-ring: rgba(227, 122, 104, 0.35);
-  --btn-glow: rgba(227, 122, 104, 0.25);
-
-  padding: 10px; /* unchanged */
-  border-radius: 10px; /* softer, friendlier */
-  border: 1px solid rgba(255, 255, 255, 0.25);
-
-  font-family: 'Signika', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #fff;
-
-  background-color: var(--btn-bg);
-
-  box-shadow:
-    0 1px 2px rgba(0, 0, 0, 0.1),
-    inset 0 1px 0 rgba(255, 255, 255, 0.25);
-
-  cursor: pointer;
-  user-select: none;
-
-  transition:
-    background-color 150ms ease,
-    box-shadow 150ms ease,
-    transform 80ms ease;
+        border-color: #466baf;
+        padding: 10px;
+        text-transform: uppercase;
+        font-family: 'Signika', sans-serif;
+        font-weight: 700;
+        color: #fff;
+        background-color: #466baf;
 }
-
-/* hover = gentle lift */
-.btn-primary:hover {
-  background-color: var(--btn-bg-hover);
-  box-shadow:
-    0 4px 10px var(--btn-glow),
-    inset 0 1px 0 rgba(255, 255, 255, 0.3);
-  transform: translateY(-1px);
-}
-
-/* active = soft press */
-.btn-primary:active {
-  background-color: var(--btn-bg-active);
-  transform: translateY(0);
-  box-shadow:
-    0 2px 4px rgba(0, 0, 0, 0.15),
-    inset 0 2px 4px rgba(0, 0, 0, 0.15);
-}
-
-/* focus = friendly halo */
-.btn-primary:focus-visible {
-  outline: none;
-  box-shadow:
-    0 0 0 3px var(--btn-ring),
-    0 4px 10px var(--btn-glow);
-}
-
-/* disabled = sleepy, not dead */
-.btn-primary:disabled,
-.btn-primary.disabled {
-  opacity: 0.6;
-  pointer-events: none;
-  filter: saturate(0.8);
-}
+    .btn-primary:hover,
+    .btn-primary:focus,
+    .btn-primary:active,
+    .btn-primary.active,
+    .open .dropdown-toggle.btn-primary {
+        border-color: #fff;
+        color: #fff;
+        background-color: #466baf;
+    }
 
 
 
     /*controlling tablet width*/
-    /*@media only screen and (max-width: 720px){
-    	.container {
-    		-webkit-transform: scale(0.9);
-    	}
-    }*/
+/*@media only screen and (max-width: 720px){
+	.container {
+		-webkit-transform: scale(0.9);
+	}
+}*/
+
+/* Mobile-specific styles for balloon visibility */
+@media only screen and (max-width: 768px) {
+	.balloons {
+		width: 70px;
+		height: 128px;
+		background-size: 70px 128px;
+	}
+	
+	.balloons h2 {
+		font-size: 32px;
+		text-shadow: 3px 3px 3px #FFF;
+	}
+	
+	.balloon-border {
+		width: 100%;
+		height: auto;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.balloons {
+		width: 50px;
+		height: 91px;
+		background-size: 50px 91px;
+	}
+	
+	.balloons h2 {
+		font-size: 24px;
+		text-shadow: 2px 2px 2px #FFF;
+	}
+	
+	.message p {
+		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 360px) {
+	.balloons {
+		width: 40px;
+		height: 73px;
+		background-size: 40px 73px;
+	}
+	
+	.balloons h2 {
+		font-size: 18px;
+		text-shadow: 1px 1px 1px #FFF;
+	}
+	
+	.message p {
+		font-size: 16px;
+	}
+}
